src/App.css
/* * {
  margin: 0;
  padding: 0;
  border: 0;
} */

.test-entity {
  text-align: center;
  background-color: #f8f5ec;
}

.test-info {
  display: flex;
  justify-content: center;
  align-items: center;
}
.main-container {
  display: grid;
  justify-items: center;
}

.container {
  padding-top: 4rem;
}

.banner {
  position: fixed;
  display: grid;
  width: 100vw;
  height: 4rem;
  justify-items: center;
  align-items: center;
  background-color: #a6093d;
}

.title {
  color: white;
}

.add-button-div {
  position: fixed;
  width: 100vw;
  margin-top: 4rem;
  justify-items: left;
}

.add-button {
  padding: 12px 24px !important;
}

